aula002/anotações/anotacao003.txt
> var n1 = 1545.5
undefined
> n1
1545.5
> n1.toFixed(2)
'1545.50'
> n1.toFixed(2).replace('.', ',')
'1545,50'
> n1.tolocaleString
undefined
> n1.tolocaleString('pt-br', {})
Uncaught TypeError: n1.tolocaleString is not a function
> n1.tolocaleString('pt-br', {sttle: 'currency', 'currency: 'BRL'})
n1.tolocaleString('pt-br', {sttle: 'currency', 'currency: 'BRL'})
                                                           ^^^

Uncaught SyntaxError: Unexpected identifier
> n1.toLocaleString('pt-br', {style: 'currency', currency: 'BRL'})
'R$ 1.545,50'
> n1.toLocaleString('pt-br', {style: 'currency', currency: 'USD'})
'US$ 1.545,50'
> n1.toLocaleString('pt-br', {style: 'currency', currency: 'EUR'})
'€ 1.545,50'
> n1.toLocaleString('pt-br', {style: 'currency', currency: 'EUR'})
'€ 1.545,50'